gcc/testsuite/rust/rustc/ui/error-codes/E0282.rs
fn main() {
    let x = "hello".chars().rev().collect(); // { dg-error ".E0282." "" { target *-*-* } }
}

